[gd_scene load_steps=3 format=2]

[ext_resource path="res://Comet.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 150.0

[node name="Comet" type="Node2D"]
script = ExtResource( 1 )

[node name="Tail" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tail"]
polygon = PoolVector2Array( 3.72714, -153.53, -45.0999, -143.989, -93.3658, -124.907, -120.31, -96.3919, -144.999, -47.4576, -153.418, 1.36954, -144.999, 61.9825, -120.866, 96.2176, -88.3147, 125.963, -44.5387, 148.412, 0.359772, 151.779, -353.721, 89.7888, -758.186, -0.720825, -367.863, -112.444 )

[node name="Head" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Tail" to="." method="_on_Tail_mouse_entered"]
[connection signal="mouse_exited" from="Tail" to="." method="_on_Tail_mouse_exited"]
[connection signal="mouse_entered" from="Head" to="." method="_on_Head_mouse_entered"]
[connection signal="mouse_exited" from="Head" to="." method="_on_Head_mouse_exited"]
